work/v06/API_INVENTORY_AFTER.md
# `@syna/core` public API inventory

Generated by `node scripts/api-inventory.mjs` from `packages/core/src/index.ts` (package version 0.6.0, commit ed09245).

| exports | value exports | type-only exports | members (interface/class) | union members | `@deprecated` items |
|---|---|---|---|---|---|
| 103 | 10 | 93 | 244 | 40 | 23 |

## Value exports (10)

### `auto` — function

Declared in `packages/core/src/definition.ts`.

```ts
function auto<C extends Contract<any>>(contract: C): AutoImplementation<C>
```

### `createRuntime` — function

Declared in `packages/core/src/runtime.ts`.

```ts
function createRuntime(options: CreateRuntimeOptions): Runtime
```

### `defaultRuntimePolicy` — const

Declared in `packages/core/src/runtime.ts`.

```ts
const defaultRuntimePolicy: RuntimePolicy
```

### `definePackage` — function

Declared in `packages/core/src/definition.ts`.

```ts
function definePackage(manifest: PackageManifest): PackageDefinitions
```

### `forward` — function

Declared in `packages/core/src/definition.ts`.

```ts
function forward<D extends Dependency>(get: () => D): ForwardDependency<D>
```

### `isSynaError` — function

Declared in `packages/core/src/errors.ts`.

```ts
function isSynaError<Code extends SynaErrorCode = SynaErrorCode>(error: unknown, code?: Code): error is SynaError<Code>
```

### `loadAll` — function

Declared in `packages/core/src/loading.ts`.

```ts
async function loadAll< const Refs extends Readonly<Record<string, ServiceRef<unknown>>>, >(refs: Refs, options?: LoadOptions): Promise<LoadedDependencies<Refs>>
```

### `override` — function

Declared in `packages/core/src/definition.ts`.

```ts
function override< From extends ServiceRevision<any>, To extends ServiceRevision<any>, >( from: From, to: ServiceInstance<To> extends ServiceInstance<From> ? To : never, ): ServiceOverride<From, To>
```

### `parseImplementationRef` — function

Declared in `packages/core/src/definition.ts`.

```ts
function parseImplementationRef<C extends Contract<any>>( contract: C, input: unknown, ): ImplementationRef<C>
```

### `SynaError` — const + type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaError<Code extends SynaErrorCode = SynaErrorCode> = Code extends SynaErrorCode ? SynaErrorOf<Code> : never
const SynaError: SynaErrorConstructor
```

## Type exports (93)

### `AllImplementations` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AllImplementations<C extends Contract<any> = Contract<any>>
  readonly kind: 'all-implementations'
  readonly contract: C
```

### `AnchoredEntry` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AnchoredEntry<E extends EntryDescriptor<any, any>>
  enter(...args: EntryCallArguments<E>): Promise<EnvHandle<E['requires']>>
  run<Result>(...args: EntryRunCallArguments<E, Result>): Promise<Result>
  check(...args: EntryCallArguments<E>): Promise<EntryCheck>
  explain(...args: EntryCallArguments<E>): Promise<EntryExplanation>
```

### `AutoImplementation` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AutoImplementation<C extends Contract<any> = Contract<any>>
  readonly kind: 'auto-implementation'
  readonly contract: C
```

### `AvailableImplementationCandidate` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type AvailableImplementationCandidate<C extends Contract<any> = Contract<any>> = ImplementationCandidate<C> & { readonly availability: { readonly status: 'available' } }
```

### `Awaitable` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Awaitable<T> = T | PromiseLike<T>
```

### `Binding` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Binding<C extends Contract<any> = Contract<any>>
  readonly kind: 'binding'
  readonly id: string
  readonly apiVersion: number
  readonly contract: C
  readonly metadata: Readonly<DescriptorMetadata>
  to<S extends ServiceRevision<any, any>>( service: ServiceInstance<S> extends ContractApi<C> ? S : never, version?: string, ): ImplementationRef<C>
  parse(input: unknown): ImplementationRef<C>
```

### `BindingAssignment` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type BindingAssignment<B extends Binding<any>> = | ImplementationRef<B['contract']> | ServiceRevision<ContractApi<B['contract']>>
```

### `BoundEntry` — type — **@deprecated** Use `AnchoredEntry`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type BoundEntry<E extends EntryDescriptor> = AnchoredEntry<E>
```

### `CandidateAvailability` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type CandidateAvailability = | { readonly status: 'available' } | { readonly status: 'unavailable' readonly code: DiagnosticCode readonly message: string readonly details: Readonly<Record<string, unknown>> }
```

### `CandidateRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CandidateRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'candidate-ref'
  readonly contract: C
  readonly familyId: string
  readonly version: string
  readonly __type?: C
```

### `Contract` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Contract<Api = unknown>
  readonly kind: 'contract'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  readonly all: AllImplementations<Contract<Api>>
  readonly __type?: Api
```

### `ContractApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ContractApi<C> = C extends Contract<infer Api> ? Api : never
```

### `CreateRuntimeOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CreateRuntimeOptions
  readonly services: readonly ServiceRevision[]
  readonly policy?: Partial<RuntimePolicy>
  readonly overrides?: readonly ServiceOverride[]
  readonly limits?: RuntimeLimits
  /** @deprecated Use `limits.planCacheEntries`. Removed in 0.7.0. */ readonly planCache?: PlanCacheOptions
  /** @deprecated Use `limits.setupDeadlineMs`. Removed in 0.7.0. */ readonly initialization?: InitializationOptions
  /** @deprecated Use `limits.disposalGraceMs`. Removed in 0.7.0. */ readonly disposal?: DisposalOptions
  /** @deprecated Use `limits.planningBudget`. Removed in 0.7.0. */ readonly planning?: PlanningOptions
  readonly diagnostics?: DiagnosticsOptions
```

### `DefinitionOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DefinitionOptions
  readonly apiVersion?: number
  readonly metadata?: DescriptorMetadata
```

### `Dependency` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Dependency = | ServiceRevision<any, any> | ServiceRange<any> | Contract<any> | Input<any> | Binding<any> | AutoImplementation<any> | AllImplementations<any> | EntryDescriptor<any, any> | ForwardDependency<any>
```

### `DependencyMap` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyMap = Readonly<Record<string, Dependency>>
```

### `DependencyRef` — type — **@deprecated** Use `ServiceRef` for the loadable ref. In 0.6 this name means a ref of either kind (`ServiceRef<T> | InputRef<T>`). Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRef<T> = ServiceRef<T> | InputRef<T>
```

### `DependencyRefFor` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefFor<D> = UnwrapForward<D> extends Input<infer T> ? InputRef<T> : ServiceRef<DependencyOutput<D>>
```

### `DependencyRefs` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefs<Requires extends DependencyMap> = { readonly [Key in keyof Requires]: DependencyRefFor<Requires[Key]> }
```

### `DeriveOptions` — type — **@deprecated** Use `ReuseConstraints`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type DeriveOptions = ReuseConstraints
```

### `DescriptorMetadata` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DescriptorMetadata
  readonly displayName?: string
  readonly description?: string
  readonly tags?: readonly string[]
  readonly data?: Readonly<Record<string, MetadataValue>>
```

### `DiagnosticCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type DiagnosticCode = SynaErrorCode | 'UNKNOWN_ERROR'
  | 'UNKNOWN_ERROR'
```

### `DiagnosticsOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DiagnosticsOptions
  readonly onEvent?: (event: RuntimeEvent) => void
```

### `DisposalOptions` — interface — **@deprecated** Use `limits.disposalGraceMs`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DisposalOptions
  /** @deprecated Use `limits.disposalGraceMs`. Removed in 0.7.0. */ readonly graceMs?: number
```

### `EntryArguments` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryArguments<E extends EntryDescriptor<any, any>> = EntryParameterValues<E['parameters']>
```

### `EntryCallback` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCallback<E extends EntryDescriptor<any, any>, Result> = ( dependencies: EntryDependencies<E>, env: EnvHandle<E['requires']>, ) => Awaitable<Result>
```

### `EntryCheck` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCheck = | { readonly ok: true; readonly inspection: PlannedEnvInspection } | { readonly ok: false; readonly error: EntryDiagnostic }
```

### `EntryDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDefinition<Requires extends DependencyMap, Parameters extends EntryParameterMap> extends DefinitionOptions
  readonly requires?: Requires
  readonly parameters?: Parameters
  readonly reuse?: ReuseConstraints
  /** @deprecated Use `reuse`. Removed in 0.7.0. */ readonly scope?: ReuseConstraints
```

### `EntryDependencies` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryDependencies<E extends EntryDescriptor<any, any>> = DependencyRefs<E['requires']>
```

### `EntryDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDescriptor<Requires extends DependencyMap = DependencyMap, Parameters extends EntryParameterMap = EntryParameterMap>
  readonly kind: 'entry'
  readonly package: PackageDescriptor
  readonly id: string
  readonly apiVersion: number
  readonly requires: Requires
  readonly parameters: Parameters
  readonly reuse: Readonly<ReuseConstraints>
  /** @deprecated Use `reuse` (the same object). Removed in 0.7.0. */ readonly scope: Readonly<ReuseConstraints>
  readonly metadata: Readonly<DescriptorMetadata>
```

### `EntryDiagnostic` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDiagnostic
  readonly code: DiagnosticCode
  readonly message: string
  readonly details: Readonly<Record<string, unknown>>
```

### `EntryExplanation` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryExplanation = EntryExplanationSuccess | EntryExplanationFailure
```

### `EntryExplanationFailure` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationFailure
  readonly ok: false
  readonly entry: string
  readonly parent?: string
  readonly error: EntryDiagnostic
  readonly missingInputs: readonly string[]
  readonly missingBindings: readonly string[]
```

### `EntryExplanationSuccess` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationSuccess
  readonly ok: true
  readonly entry: string
  readonly parent?: string
  readonly parameters: { readonly inputsProvided: readonly string[] readonly inputsInherited: readonly string[] readonly bindingsResolved: Readonly<Record<string, string>> readonly bindingsInherited: Readonly<Record<string, string>> }
  readonly services: ExplainCounts & { readonly eagerToStart: number readonly eagerInherited: number }
  readonly inputs: { readonly inherited: number; readonly provided: number }
  readonly synthetic: ExplainCounts
  readonly choices: Readonly<Record<string, string>>
  readonly nodes: readonly ExplainedNode[]
  readonly forks: readonly ExplainedNode[]
```

### `EntryOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryOptions
  readonly reuse?: ReuseConstraints
```

### `EntryParameters` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameters<E extends EntryDescriptor<any, any>> = E['parameters']
```

### `EnvHandle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvHandle<Requires extends DependencyMap = DependencyMap>
  readonly id: string
  readonly deps: DependencyRefs<Requires>
  readonly state: EnvState
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunCallArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryExplanation>
  derive(reuse?: ReuseConstraints): Promise<EnvHandle<{}>>
  anchor<E extends EntryDescriptor>(entry: E): AnchoredEntry<E>
  /** @deprecated Use `anchor()`. Removed in 0.7.0. */ bind<E extends EntryDescriptor>(entry: E): AnchoredEntry<E>
  inspect(): EnvInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `EnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspection
  readonly id: string
  readonly parentId?: string
  readonly state: string
  readonly nodes: readonly EnvInspectionNode[]
```

### `EnvInspectionNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspectionNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly slotId: string
  readonly ownerEnvId: string
  readonly state: string
  readonly dependencies: Readonly<Record<string, string>>
```

### `EnvState` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EnvState = 'activating' | 'ready' | 'disposing' | 'disposed'
  | 'activating'
  | 'ready'
  | 'disposing'
  | 'disposed'
```

### `ExplainCounts` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainCounts
  readonly inherited: number
  readonly new: number
  readonly forked: number
```

### `ExplainedNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainedNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly disposition: NodeDisposition
  readonly eager: boolean
  readonly cause?: ForkCause
  readonly path: readonly string[]
```

### `FailureAfterExhaustion` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type FailureAfterExhaustion = 'sticky' | 'retry-on-next-load'
  | 'sticky'
  | 'retry-on-next-load'
```

### `ForkCause` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ForkCause = | { readonly kind: 'root' } | { readonly kind: 'not-in-parent' } | { readonly kind: 'fresh'; readonly target: string } | { readonly kind: 'input-provided'; readonly input: string } | { readonly kind: 'binding-changed'; readonly binding: string } | { readonly kind: 'structure-changed' } | { readonly kind: 'anchor-dependency-mismatch'; readonly family: string; readonly via: string } | { readonly kind: 'dependency-forked'; readonly via: string; readonly dependency: string }
```

### `ForwardDependency` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ForwardDependency<D = Dependency>
  readonly kind: 'forward-dependency'
  readonly get: () => D
```

### `ImplementationCandidate` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationCandidate<C extends Contract<any> = Contract<any>> extends ImplementationDescriptor<C>
  readonly ref: CandidateRef<C>
  readonly availability: CandidateAvailability
```

### `ImplementationDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationDescriptor<C extends Contract<any> = Contract<any>>
  readonly contractId: string
  readonly familyId: string
  readonly version: string
  readonly eager: boolean
  readonly familyMetadata: Readonly<DescriptorMetadata>
  readonly revisionMetadata: Readonly<DescriptorMetadata>
  readonly persistentRef: ImplementationRef<C>
```

### `ImplementationRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'persistent-implementation-ref'
  readonly contractId: string
  readonly familyId: string
  readonly version: string
  /** @deprecated Use `familyId` (the same value). Optional in the type so a plain `{ kind, contractId, familyId, version }` object is an `ImplementationRef`; refs created by `to()`/`parse()` always carry it as a non-enumerable, non-serialized alias. Removed in 0.7.0. */ readonly implementationId?: string
  readonly __type?: C
```

### `ImplementationSet` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationSet<C extends Contract<any> = Contract<any>> extends Iterable<ImplementationCandidate<C>>
  readonly contract: C
  readonly candidates: readonly ImplementationCandidate<C>[]
  resolve(ref: ImplementationRef<C>): ImplementationCandidate<C>
  load( candidate: ImplementationCandidate<C> | CandidateRef<C> | ImplementationRef<C>, options?: LoadOptions, ): Promise<ContractApi<C>>
```

### `InitializationOptions` — interface — **@deprecated** Use `limits.setupDeadlineMs`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface InitializationOptions
  /** @deprecated Use `limits.setupDeadlineMs`. Removed in 0.7.0. */ readonly deadlineMs?: number
```

### `Input` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Input<ValueType = unknown>
  readonly kind: 'input'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __type?: ValueType
```

### `InputRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface InputRef<T>
  read(): T
```

### `InputType` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InputType<I> = I extends Input<infer T> ? T : never
```

### `InspectionNodeKind` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InspectionNodeKind = | 'service' | 'input' | 'binding' | 'all' | 'entry'
  | 'service'
  | 'input'
  | 'binding'
  | 'all'
  | 'entry'
```

### `LoadedDependencies` — type

Declared in `packages/core/src/loading.ts`.

```ts
type LoadedDependencies<Refs extends Readonly<Record<string, ServiceRef<unknown>>>> = { readonly [Key in keyof Refs]: Refs[Key] extends ServiceRef<infer Value> ? Value : never }
```

### `LoadOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface LoadOptions
  readonly signal?: AbortSignal
```

### `MetadataValue` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type MetadataValue = | string | number | boolean | null | readonly MetadataValue[] | { readonly [key: string]: MetadataValue }
```

### `NodeDisposition` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type NodeDisposition = 'inherited' | 'new' | 'forked'
  | 'inherited'
  | 'new'
  | 'forked'
```

### `PackageDefinitions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDefinitions
  readonly package: PackageDescriptor
  contract<Api>(): Contract<Api>
  contract<Api>(options: DefinitionOptions): Contract<Api>
  contract<Api>(name: string, options?: DefinitionOptions): Contract<Api>
  input<T>(name: string, options?: DefinitionOptions): Input<T>
  binding<C extends Contract<any>>( name: string, contract: C, options?: DefinitionOptions, ): Binding<C>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( name: string, definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( name: string, definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
```

### `PackageDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDescriptor
  readonly name: string
  readonly id: string
  readonly version: string
  readonly metadata: Readonly<DescriptorMetadata>
```

### `PackageManifest` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageManifest
  readonly name: string
  readonly version: string
  readonly description?: string
  readonly syna?: { readonly id?: string readonly metadata?: DescriptorMetadata }
```

### `PersistentImplementationRef` — type — **@deprecated** Use `ImplementationRef`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type PersistentImplementationRef<C extends Contract<any> = Contract<any>> = ImplementationRef<C>
```

### `PlanCacheOptions` — interface — **@deprecated** Use `limits.planCacheEntries`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlanCacheOptions
  /** @deprecated Use `limits.planCacheEntries`. Removed in 0.7.0. */ readonly maxEntries?: number
```

### `PlannedEnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlannedEnvInspection
  readonly nodeCount: number
  readonly ownedSlotCount: number
  readonly reusedSlotCount: number
  readonly eagerServiceCount: number
  readonly selectedRevisions: Readonly<Record<string, string>>
```

### `PlanningOptions` — interface — **@deprecated** Use `limits.planningBudget`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlanningOptions
  /** @deprecated Use `limits.planningBudget`. Removed in 0.7.0. */ readonly searchBudget?: number
```

### `ProvidedShape` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ProvidedShape<Provides extends readonly Contract[]> = [Provides[number]] extends [never] ? unknown : UnionToIntersection<ContractApiUnion<Provides>>
```

### `ReuseConstraints` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ReuseConstraints
  readonly fresh?: readonly ReuseTarget[]
  readonly share?: readonly ReuseTarget[]
```

### `ReuseTarget` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ReuseTarget = ServiceRevision<any> | ServiceFamily<any>
```

### `Runtime` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Runtime
  readonly catalog: RuntimeCatalog
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunCallArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryExplanation>
  inspect(): RuntimeInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `RuntimeCatalog` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeCatalog
  implementations<C extends Contract<any>>( contract: C, ): readonly ImplementationDescriptor<C>[]
  resolve<C extends Contract<any>>( ref: ImplementationRef<C>, ): ImplementationDescriptor<C>
  revisions(familyId: string): readonly string[]
```

### `RuntimeEvent` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type RuntimeEvent = | { readonly type: 'late-setup-result' readonly slot: string readonly revision: string readonly env: string readonly cleanupErrors: readonly unknown[] } | { readonly type: 'late-setup-failure' readonly slot: string readonly revision: string readonly env: string readonly error: unknown readonly cleanupErrors: readonly unknown[] } | { readonly type: 'attempt-abandoned' /** `setup`: the raw Promise is still pending. `rollback`: the setup settled but its cleanups outlived the grace. */ readonly phase: 'setup' | 'rollback' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number } | { /** * The raw setup Promise of a timed-out or abandoned attempt was garbage- * collected before settling: nothing can resolve it any more. Cleanups the * attempt registered were run and the attempt is settled as failed. */ readonly type: 'attempt-unreachable' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number readonly cleanupErrors: readonly unknown[] } | { readonly type: 'foreign-thenable-setup' readonly slot: string readonly revision: string readonly env: string }
```

### `RuntimeInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeInspection
  readonly admittedServices: readonly string[]
  readonly internalServices: readonly string[]
  readonly overriddenServices: readonly string[]
  readonly definitions: DefinitionCounts
  readonly rootEnvCount: number
  readonly liveEnvCount: number
  readonly unsettledAttempts: readonly UnsettledAttemptInspection[]
  readonly planCache: { readonly hits: number readonly misses: number readonly entries: number readonly evictions: number readonly maxEntries: number }
  readonly definitionWarnings: readonly string[]
```

### `RuntimeLimits` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeLimits
  readonly setupDeadlineMs?: number
  readonly disposalGraceMs?: number
  readonly planningBudget?: number
  readonly planCacheEntries?: number
```

### `RuntimePolicy` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicy
  orderAutoCandidates( contract: Contract, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
  orderVersionCandidates( family: ServiceFamily, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
```

### `RuntimePolicyContext` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicyContext
  readonly dependencySite: string
  /** @deprecated Use `dependencySite`. Removed in 0.7.0. */ readonly site: string
  readonly parentActiveRevisionKeys: ReadonlySet<string>
```

### `ScopeTarget` — type — **@deprecated** Use `ReuseTarget`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type ScopeTarget = ReuseTarget
```

### `ServiceDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceDefinition<Requires extends DependencyMap, Provides extends readonly Contract[], Instance>
  readonly requires?: Requires
  readonly provides?: Provides
  readonly eager?: boolean
  readonly uniqueWithin?: 'lineage'
  readonly failure?: ServiceFailurePolicy
  readonly setupDeadlineMs?: number
  readonly metadata?: DescriptorMetadata
  readonly revisionMetadata?: DescriptorMetadata
  readonly setup: ( dependencies: DependencyRefs<Requires>, lifecycle: ServiceLifecycle, ) => SetupResult<Instance>
```

### `ServiceFailurePolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFailurePolicy = | 'sticky' | { /** Total attempts in one materialization sequence, including the first. */ readonly attempts?: number /** Delay between attempts in the same sequence. */ readonly delayMs?: number readonly afterExhaustion?: FailureAfterExhaustion /** Minimum delay before a future load may start another sequence. */ readonly cooldownMs?: number }
  | 'sticky'
```

### `ServiceFamily` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceFamily<PublicApi = unknown>
  readonly kind: 'service-family'
  readonly id: string
  readonly uniqueWithin: UniquenessPolicy
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __type?: PublicApi
```

### `ServiceFamilyApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFamilyApi<F> = F extends ServiceFamily<infer Api> ? Api : never
```

### `ServiceInstance` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceInstance<S> = S extends ServiceRevision<infer Instance, any> ? Instance : never
```

### `ServiceLifecycle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceLifecycle
  readonly signal: AbortSignal
  onDispose(cleanup: () => Awaitable<void>): void
```

### `ServiceOverride` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceOverride<From extends ServiceRevision<any> = ServiceRevision<any>, To extends ServiceRevision<any> = ServiceRevision<any>>
  readonly kind: 'service-override'
  readonly from: From
  readonly to: To
```

### `ServiceRange` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRange<F extends ServiceFamily<any> = ServiceFamily<any>>
  readonly kind: 'service-range'
  readonly family: F
  readonly range: string
  readonly origin: ServiceRevision<any, any>
  readonly requiredContractIds: readonly string[]
```

### `ServiceRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRef<T>
  load(options?: LoadOptions): Promise<T>
```

### `ServiceRevision` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRevision<Instance = unknown, PublicApi = unknown>
  readonly kind: 'service-revision'
  readonly package: PackageDescriptor
  readonly family: ServiceFamily<PublicApi>
  readonly version: string
  readonly key: string
  readonly requires: DependencyMap
  readonly provides: readonly Contract[]
  readonly eager: boolean
  readonly failure: NormalizedServiceFailurePolicy
  readonly setupDeadlineMs: number | undefined
  readonly metadata: Readonly<DescriptorMetadata>
  setup( dependencies: DependencyRefs<DependencyMap>, lifecycle: ServiceLifecycle, ): SetupResult<Instance>
  range(version?: string): ServiceRange<ServiceFamily<PublicApi>>
```

### `SynaErrorCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaErrorCode = | 'AMBIGUOUS_IMPLEMENTATION' | 'DUPLICATE_DEFINITION' | 'ENTRY_ACTIVATION_FAILED' | 'FRESH_CONSTRAINT_FAILED' | 'INCOMPATIBLE_IMPLEMENTATION' | 'INITIALIZATION_TIMEOUT' | 'INVALID_DESCRIPTOR' | 'INVALID_ENV_STATE' | 'LINEAGE_UNIQUENESS_CONFLICT' | 'LOAD_CANCELLED' | 'MISSING_AUTO_POLICY' | 'MISSING_BINDING' | 'MISSING_IMPLEMENTATION' | 'MISSING_INPUT' | 'MISSING_SERVICE' | 'OWNER_NOT_READY' | 'PLANNING_BUDGET_EXCEEDED' | 'ROLLBACK_FAILED' | 'RUNTIME_MISMATCH' | 'SHARE_CONSTRAINT_FAILED' | 'UNSATISFIABLE_TOPOLOGY' | 'UNSETTLED_ATTEMPT'
  | 'AMBIGUOUS_IMPLEMENTATION'
  | 'DUPLICATE_DEFINITION'
  | 'ENTRY_ACTIVATION_FAILED'
  | 'FRESH_CONSTRAINT_FAILED'
  | 'INCOMPATIBLE_IMPLEMENTATION'
  | 'INITIALIZATION_TIMEOUT'
  | 'INVALID_DESCRIPTOR'
  | 'INVALID_ENV_STATE'
  | 'LINEAGE_UNIQUENESS_CONFLICT'
  | 'LOAD_CANCELLED'
  | 'MISSING_AUTO_POLICY'
  | 'MISSING_BINDING'
  | 'MISSING_IMPLEMENTATION'
  | 'MISSING_INPUT'
  | 'MISSING_SERVICE'
  | 'OWNER_NOT_READY'
  | 'PLANNING_BUDGET_EXCEEDED'
  | 'ROLLBACK_FAILED'
  | 'RUNTIME_MISMATCH'
  | 'SHARE_CONSTRAINT_FAILED'
  | 'UNSATISFIABLE_TOPOLOGY'
  | 'UNSETTLED_ATTEMPT'
```

### `SynaErrorConstructor` — interface

Declared in `packages/core/src/errors.ts`.

```ts
interface SynaErrorConstructor
  new <Code extends SynaErrorCode>(code: Code, message: string, ...rest: DetailsArguments<Code>): SynaError<Code>
  readonly prototype: SynaError
```

### `SynaErrorDetails` — type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaErrorDetails = { readonly AMBIGUOUS_IMPLEMENTATION: { readonly contract: string; readonly site: string; readonly families: readonly string[] } readonly DUPLICATE_DEFINITION: | { readonly existing: string; readonly received: string } | { readonly revision: string } | { readonly revision: string; readonly expected: string; readonly actual: string } readonly ENTRY_ACTIVATION_FAILED: { readonly entry: string readonly env: string readonly causeCode?: SynaErrorCode readonly causeDetails?: Readonly<Record<string, unknown>> } readonly FRESH_CONSTRAINT_FAILED: | { readonly env: string; readonly revision: string } | { readonly env: string; readonly family: string } | { readonly site: string; readonly selectedKey: string; readonly candidates: readonly string[] } | { readonly expectedSourceSlot: string; readonly receivedSourceSlot: string } readonly INCOMPATIBLE_IMPLEMENTATION: | { readonly binding: string; readonly contract: string; readonly reference: string } | { readonly binding: string; readonly revision: string } | { readonly contract: string; readonly reference: string } | { readonly family: string readonly range: string readonly site: string readonly realm: string readonly origin: string readonly required: readonly string[] readonly candidates: readonly { readonly revision: string; readonly provides: readonly string[] }[] } readonly INITIALIZATION_TIMEOUT: { readonly slot: string readonly revision: string readonly env: string readonly attempt: number readonly deadlineMs: number readonly elapsedMs: number readonly pendingLoads: readonly PendingLoad[] readonly suspectedWaitCycle?: readonly string[] readonly note: string } readonly INVALID_DESCRIPTOR: { readonly site?: string readonly binding?: string readonly revision?: string readonly original?: readonly string[] readonly ordered?: readonly string[] } readonly INVALID_ENV_STATE: { readonly env?: string readonly entry?: string readonly state?: string readonly node?: string readonly slot?: string readonly revision?: string readonly attempt?: number } readonly LINEAGE_UNIQUENESS_CONFLICT: | { readonly family: string readonly anchorRevision: string readonly anchorSlot: string readonly attempted: readonly { readonly revision: string; readonly slot: string; readonly cause: ForkCause | undefined; readonly path: readonly string[] }[] } | { readonly family: string; readonly slots: readonly string[] } readonly LOAD_CANCELLED: { readonly slot: string; readonly revision: string } readonly MISSING_AUTO_POLICY: { readonly contract: string; readonly site: string; readonly families: readonly string[] } readonly MISSING_BINDING: | { readonly binding: string; readonly site: string; readonly missing: readonly string[] } | EntryParametersMissing readonly MISSING_IMPLEMENTATION: | { readonly binding: string; readonly implementation: string; readonly version: string; readonly available: readonly string[] } | { readonly contract: string; readonly site: string } | { readonly contract: string; readonly implementation: string; readonly version: string; readonly available?: readonly string[] } | { readonly revision: string | undefined } readonly MISSING_INPUT: | { readonly input: string; readonly site: string; readonly missing: readonly string[] } | EntryParametersMissing readonly MISSING_SERVICE: | { readonly revision: string } | { readonly binding: string; readonly revision: string } | { readonly revision: string; readonly site: string; readonly realm: string } | { readonly family: string; readonly range: string; readonly site: string; readonly realm: string } readonly OWNER_NOT_READY: { readonly entry: string; readonly env: string; readonly state: EnvState } readonly PLANNING_BUDGET_EXCEEDED: { readonly site: string; readonly budget: number } readonly ROLLBACK_FAILED: { readonly slot: string; readonly revision: string; readonly state: string } readonly RUNTIME_MISMATCH: Record<string, never> readonly SHARE_CONSTRAINT_FAILED: { readonly revision: string; readonly env: string; readonly cause: ForkCause | undefined; readonly path: readonly string[] } readonly UNSATISFIABLE_TOPOLOGY: { readonly site: string readonly candidates: readonly string[] readonly failures: readonly { readonly code: SynaErrorCode; readonly message: string; readonly details: Readonly<Record<string, unknown>> }[] } readonly UNSETTLED_ATTEMPT: | { readonly attempts: readonly UnsettledAttemptInspection[] } | { readonly env: string; readonly state: EnvState; readonly slots: readonly AbandonedSlot[] } | { readonly slot: string; readonly revision: string; readonly attempt: number; readonly runningForMs: number } }
```

### `SynaErrorOf` — interface

Declared in `packages/core/src/errors.ts`.

```ts
interface SynaErrorOf<Code extends SynaErrorCode> extends Error
  readonly name: 'SynaError'
  readonly code: Code
  readonly details: Readonly<SynaErrorDetails[Code]>
```

### `SynaRuntime` — type — **@deprecated** Use `Runtime`. Removed in 0.7.0.

Declared in `packages/core/src/descriptors.ts`.

```ts
type SynaRuntime = Runtime
```

### `UniquenessPolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type UniquenessPolicy = 'none' | 'lineage'
  | 'none'
  | 'lineage'
```

### `UnsettledAttemptInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface UnsettledAttemptInspection
  readonly attempt: number
  readonly slot: string
  readonly revision: string
  readonly env: string
  readonly state: 'timed-out' | 'abandoned' | 'rolling-back' | 'settling'
  readonly runningForMs: number
```

## `@deprecated` items (23)

| item | kind | note |
|---|---|---|
| `BoundEntry` | type | Use `AnchoredEntry`. Removed in 0.7.0. |
| `CreateRuntimeOptions.planCache` | member | Use `limits.planCacheEntries`. Removed in 0.7.0. |
| `CreateRuntimeOptions.initialization` | member | Use `limits.setupDeadlineMs`. Removed in 0.7.0. |
| `CreateRuntimeOptions.disposal` | member | Use `limits.disposalGraceMs`. Removed in 0.7.0. |
| `CreateRuntimeOptions.planning` | member | Use `limits.planningBudget`. Removed in 0.7.0. |
| `DependencyRef` | type | Use `ServiceRef` for the loadable ref. In 0.6 this name means a ref of either kind (`ServiceRef<T> | InputRef<T>`). Removed in 0.7.0. |
| `DeriveOptions` | type | Use `ReuseConstraints`. Removed in 0.7.0. |
| `DisposalOptions` | interface | Use `limits.disposalGraceMs`. Removed in 0.7.0. |
| `DisposalOptions.graceMs` | member | Use `limits.disposalGraceMs`. Removed in 0.7.0. |
| `EntryDefinition.scope` | member | Use `reuse`. Removed in 0.7.0. |
| `EntryDescriptor.scope` | member | Use `reuse` (the same object). Removed in 0.7.0. |
| `EnvHandle.bind` | member | Use `anchor()`. Removed in 0.7.0. |
| `ImplementationRef.implementationId` | member | Use `familyId` (the same value). Optional in the type so a plain `{ kind, contractId, familyId, version }` object is an `ImplementationRef`; refs created by `to()`/`parse()` always carry it as a non-enumerable, non-serialized alias. Removed in 0.7.0. |
| `InitializationOptions` | interface | Use `limits.setupDeadlineMs`. Removed in 0.7.0. |
| `InitializationOptions.deadlineMs` | member | Use `limits.setupDeadlineMs`. Removed in 0.7.0. |
| `PersistentImplementationRef` | type | Use `ImplementationRef`. Removed in 0.7.0. |
| `PlanCacheOptions` | interface | Use `limits.planCacheEntries`. Removed in 0.7.0. |
| `PlanCacheOptions.maxEntries` | member | Use `limits.planCacheEntries`. Removed in 0.7.0. |
| `PlanningOptions` | interface | Use `limits.planningBudget`. Removed in 0.7.0. |
| `PlanningOptions.searchBudget` | member | Use `limits.planningBudget`. Removed in 0.7.0. |
| `RuntimePolicyContext.site` | member | Use `dependencySite`. Removed in 0.7.0. |
| `ScopeTarget` | type | Use `ReuseTarget`. Removed in 0.7.0. |
| `SynaRuntime` | type | Use `Runtime`. Removed in 0.7.0. |
